--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,23 +60,43 @@ body {
   border-bottom: 5px solid #bbbbbb;
   font-weight: bold;
 }
+.dropdown-section .accordion-wrapper .swiper {
+  background: rgb(15, 77, 7);
+}
 .dropdown-section .accordion-wrapper .swiper .swiper-slide {
   text-align: center;
 }
 .dropdown-section .accordion-wrapper .swiper .swiper-slide .slider-card {
-  padding: 35px;
   background: #474747;
+  border: 1px solid #393939;
   height: 100%;
+  padding: 5px 0;
+}
+.dropdown-section .accordion-wrapper .swiper .swiper-slide .slider-card .image {
+  height: 50px;
+  padding-bottom: 5px;
+}
+.dropdown-section .accordion-wrapper .swiper .swiper-slide .slider-card .image img {
+  height: 100%;
+  max-width: 60px;
 }
 .dropdown-section .accordion-wrapper .swiper .swiper-slide .slider-card p {
-  font-size: 18px;
-  line-height: 1.2;
+  font-size: 14px;
+  color: #fff;
 }
 .dropdown-section .accordion-wrapper .swiper .swiper-button-next::after {
   font-size: 20px;
 }
 .dropdown-section .accordion-wrapper .swiper .swiper-button-prev::after {
   font-size: 20px;
+}
+.dropdown-section .accordion-wrapper .swiper .swiper-button-next {
+  background: rgba(38, 177, 79, 0.507);
+  color: #fff;
+}
+.dropdown-section .accordion-wrapper .swiper .swiper-button-prev {
+  background: rgba(38, 177, 79, 0.507);
+  color: #fff;
 }
 .dropdown-section .accordion-wrapper .accordion-item {
   border: 1px solid #393939;
