--- a/assets/scss/components/_dSection.scss
+++ b/assets/scss/components/_dSection.scss
@@ -25,17 +25,30 @@
 
 
         .swiper {
+            background: rgb(15, 77, 7);
+
             .swiper-slide {
                 text-align: center;
 
                 .slider-card {
-                    padding: 35px;
                     background: #474747;
+                    border: 1px solid #393939;
                     height: 100%;
+                    padding: 5px 0;
+
+                    .image {
+                        height: 50px;
+                        padding-bottom: 5px;
+
+                        img {
+                            height: 100%;
+                            max-width: 60px;
+                        }
+                    }
 
                     p {
-                        font-size: 18px;
-                        line-height: 1.2;
+                        font-size: 14px;
+                        color: #fff;
                     }
                 }
             }
@@ -48,35 +61,15 @@
                 font-size: 20px;
             }
 
-            // .swiper-button-next {
-            //     top: 400px;
-            //     left: 60px;
-            //     z-index: 99;
-            //     background: var(--sky-blue);
-            //     color: #fff;
-            //     padding: 10px 20px;
+            .swiper-button-next {
+                background: rgba(38, 177, 79, 0.507);
+                color: #fff;
+            }
 
-            //     @media(max-width: 420px) {
-            //         left: calc(50% + 30px);
-            //         transform: translateX(-50%);
-            //         top: 300px;
-            //     }
-            // }
-
-            // .swiper-button-prev {
-            //     top: 400px;
-            //     left: 10px;
-            //     z-index: 99;
-            //     background: var(--sky-blue);
-            //     color: #fff;
-            //     padding: 10px 20px;
-
-            //     @media(max-width: 420px) {
-            //         left: calc(50% - 30px);
-            //         transform: translateX(-50%);
-            //         top: 300px;
-            //     }
-            // }
+            .swiper-button-prev {
+                background: rgba(38, 177, 79, 0.507);
+                color: #fff;
+            }
         }
 
 
