--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,16 +86,16 @@ body {
 }
 .dropdown-section .accordion-wrapper .swiper .swiper-button-next::after {
   font-size: 20px;
+  font-weight: bold;
 }
 .dropdown-section .accordion-wrapper .swiper .swiper-button-prev::after {
   font-size: 20px;
+  font-weight: bold;
 }
 .dropdown-section .accordion-wrapper .swiper .swiper-button-next {
-  background: rgba(38, 177, 79, 0.507);
   color: #fff;
 }
 .dropdown-section .accordion-wrapper .swiper .swiper-button-prev {
-  background: rgba(38, 177, 79, 0.507);
   color: #fff;
 }
 .dropdown-section .accordion-wrapper .accordion-item {
@@ -109,6 +109,10 @@ body {
   border-radius: 0;
   color: #fff;
   box-shadow: none;
+  padding: 14px 20px;
+}
+.dropdown-section .accordion-wrapper .accordion-item .main-header .accordion-button:not(.collapsed) {
+  box-shadow: none !important;
 }
 .dropdown-section .accordion-wrapper .accordion-item .main-header .accordion-button::after {
   background-image: url("../images/arrow.png");
@@ -124,6 +128,10 @@ body {
   background: #474747;
   color: #fff;
   border-radius: 0;
+  padding: 12px 20px;
+}
+.dropdown-section .accordion-wrapper .accordion-main-body .sub-header .accordion-button:not(.collapsed) {
+  box-shadow: none !important;
 }
 .dropdown-section .accordion-wrapper .accordion-main-body .sub-header .accordion-button img {
   width: 28px;
@@ -149,7 +157,7 @@ body {
   padding: 0;
 }
 .dropdown-section .accordion-wrapper .accordion-main-body .sub-body ul li {
-  border-bottom: 1px solid #7d7d7d;
+  border-bottom: 1px solid #666666;
 }
 .dropdown-section .accordion-wrapper .accordion-main-body .sub-body ul li a {
   display: block;
