--- a/assets/scss/components/_dSection.scss
+++ b/assets/scss/components/_dSection.scss
@@ -22,8 +22,6 @@
     }
 
     .accordion-wrapper {
-
-
         .swiper {
             background: rgb(15, 77, 7);
 
@@ -113,6 +111,7 @@
                     color: #fff;
                     border-radius: 0;
                     padding: 12px 20px;
+                    box-shadow: none;
 
                     &:not(.collapsed) {
                         box-shadow: none !important;
@@ -162,4 +161,8 @@
             }
         }
     }
+}
+
+.accordion-button:not(.collapsed) {
+    box-shadow: none !important;
 }
