--- a/assets/scss/components/_dSection.scss
+++ b/assets/scss/components/_dSection.scss
@@ -70,10 +70,9 @@
             }
         }
 
-
-
         .accordion-item {
-            border: 1px solid #393939;
+            border: none !important;
+            border-bottom: 1px solid #393939 !important;
 
             .main-header {
                 background: #000;
