--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,7 @@ body {
   color: #fff;
 }
 .dropdown-section .accordion-wrapper .accordion-item {
+  background: #393939;
   border: none !important;
   border-bottom: 1px solid #393939 !important;
 }
