--- a/assets/scss/components/_dSection.scss
+++ b/assets/scss/components/_dSection.scss
@@ -71,6 +71,7 @@
         }
 
         .accordion-item {
+            background: #393939;
             border: none !important;
             border-bottom: 1px solid #393939 !important;
 
