--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,8 @@ body {
   background: #393939;
   border: none !important;
   border-bottom: 1px solid #393939 !important;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 .dropdown-section .accordion-wrapper .accordion-item .main-header {
   background: #000;
@@ -123,7 +125,8 @@ body {
   background: #393939;
 }
 .dropdown-section .accordion-wrapper .accordion-main-body .accordion-item {
-  border: 1px solid #393939;
+  border: none !important;
+  border: 1px solid #393939 !important;
   background: #9b9b9b;
 }
 .dropdown-section .accordion-wrapper .accordion-main-body .sub-header .accordion-button {
