--- a/assets/scss/components/_dSection.scss
+++ b/assets/scss/components/_dSection.scss
@@ -74,6 +74,8 @@
             background: #393939;
             border: none !important;
             border-bottom: 1px solid #393939 !important;
+            padding: 0 !important;
+            margin: 0 !important;
 
             .main-header {
                 background: #000;
@@ -100,7 +102,8 @@
             background: #393939;
 
             .accordion-item {
-                border: 1px solid #393939;
+                border: none !important;
+                border: 1px solid #393939 !important;
                 background: #9b9b9b;
             }
 
