--- a/assets/scss/components/_dSection.scss
+++ b/assets/scss/components/_dSection.scss
@@ -104,10 +104,12 @@
             .accordion-item {
                 border: none !important;
                 border: 1px solid #393939 !important;
-                background: #9b9b9b;
+                // background: #9b9b9b;
+                background: #474747;
             }
 
             .sub-header {
+                background: #474747;
 
                 .accordion-button {
                     background: #474747;
