--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,4 +19,7 @@
 
 /*=== components css start === */
 @import 'components/dSection';
+@import 'components/coupon';
+@import 'components/conThree';
+@import 'components/pFour';
 /*===// end of components css === */
