--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,15 +321,15 @@ body {
 }
 .contents-three .nav-tab-wrapper .tab-content .content-holder .content-row {
   background: #5f5f5f;
-  display: grid;
-  grid-gap: 1px;
-  grid-template-columns: 4fr 1fr 1fr 1fr;
+  display: flex;
 }
 .contents-three .nav-tab-wrapper .tab-content .content-holder .content-row .title {
   background: #585858;
   color: #fff;
   padding: 8px;
   margin-bottom: 1px;
+  flex-grow: 1;
+  margin-right: 1px;
 }
 .contents-three .nav-tab-wrapper .tab-content .content-holder .content-row .title .f-name {
   font-size: 15px;
@@ -345,6 +345,8 @@ body {
   font-size: 14px;
 }
 .contents-three .nav-tab-wrapper .tab-content .content-holder .content-row .num {
+  width: 14%;
+  margin-right: 1px;
   background: #474747;
   color: #ffcc00;
   display: grid;
