--- a/assets/scss/components/_conThree.scss
+++ b/assets/scss/components/_conThree.scss
@@ -60,9 +60,7 @@
 
                 .content-row {
                     background: #5f5f5f;
-                    display: grid;
-                    grid-gap: 1px;
-                    grid-template-columns: 4fr 1fr 1fr 1fr;
+                    display: flex;
 
 
                     .title {
@@ -70,6 +68,8 @@
                         color: #fff;
                         padding: 8px;
                         margin-bottom: 1px;
+                        flex-grow: 1;
+                        margin-right: 1px;
 
                         .f-name {
                             font-size: 15px;
@@ -91,6 +91,8 @@
                     }
 
                     .num {
+                        width: 14%;
+                        margin-right: 1px;
                         background: #474747;
                         color: #ffcc00;
                         display: grid;
