--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,15 +222,15 @@ body {
 }
 .coupon-content .tab-content .tab-pane .content-holder .content-row {
   background: #5f5f5f;
-  display: grid;
-  grid-gap: 1px;
-  grid-template-columns: 4fr 1fr 1fr 1fr;
+  display: flex;
 }
 .coupon-content .tab-content .tab-pane .content-holder .content-row .title {
   background: #585858;
   color: #fff;
   padding: 8px;
   margin-bottom: 1px;
+  flex-grow: 1;
+  margin-right: 1px;
 }
 .coupon-content .tab-content .tab-pane .content-holder .content-row .title .f-name {
   font-size: 12px;
@@ -246,6 +246,8 @@ body {
   font-size: 12px;
 }
 .coupon-content .tab-content .tab-pane .content-holder .content-row .num {
+  width: 14%;
+  margin-right: 1px;
   background: #474747;
   color: #ffcc00;
   display: grid;
@@ -255,6 +257,12 @@ body {
 }
 .coupon-content .tab-content .tab-pane .content-holder .content-row.head {
   background: #a7a7a7;
+}
+.coupon-content .tab-content .tab-pane .content-holder .content-row.head .ddate {
+  flex-grow: 1;
+}
+.coupon-content .tab-content .tab-pane .content-holder .content-row.head .numx {
+  width: 14%;
 }
 .coupon-content ::-webkit-scrollbar {
   width: 1px;
@@ -356,6 +364,12 @@ body {
 }
 .contents-three .nav-tab-wrapper .tab-content .content-holder .content-row.head {
   background: #a7a7a7;
+}
+.contents-three .nav-tab-wrapper .tab-content .content-holder .content-row.head .ddate {
+  flex-grow: 1;
+}
+.contents-three .nav-tab-wrapper .tab-content .content-holder .content-row.head .numx {
+  width: 14%;
 }
 .contents-three .nav-tab-wrapper .tab-content .accordion-wrapper .accordion-item {
   background: #393939;
