--- a/assets/scss/components/_coupon.scss
+++ b/assets/scss/components/_coupon.scss
@@ -47,9 +47,7 @@
 
                 .content-row {
                     background: #5f5f5f;
-                    display: grid;
-                    grid-gap: 1px;
-                    grid-template-columns: 4fr 1fr 1fr 1fr;
+                    display: flex;
 
 
                     .title {
@@ -57,6 +55,8 @@
                         color: #fff;
                         padding: 8px;
                         margin-bottom: 1px;
+                        flex-grow: 1;
+                        margin-right: 1px;
 
                         .f-name {
                             font-size: 12px;
@@ -78,6 +78,8 @@
                     }
 
                     .num {
+                        width: 14%;
+                        margin-right: 1px;
                         background: #474747;
                         color: #ffcc00;
                         display: grid;
@@ -89,6 +91,13 @@
                     &.head {
                         background: #a7a7a7;
 
+                        .ddate {
+                            flex-grow: 1;
+                        }
+
+                        .numx {
+                            width: 14%;
+                        }
                     }
                 }
             }
